@@ -26,6 +26,7 @@ Improvements:
 Bug fixes:
 
  - Fix stash diff display when reloading the stash view after a deleting.
+ - Set the commit reference when opening the blame view from the blob view.
  - Correctly identify and highlight the remote branch tracked by HEAD.
  - Pass --no-color after user defined arguments to ensure that colors do not
    break the output parsing. (GH #191)
